--- a/css/main.css
+++ b/css/main.css
@@ -9,27 +9,56 @@ body {
 	overflow-x: hidden;
 }
 
-.main {
-	height: 480px;
-	width: 640px;
+.image-title {
+
+  font-size: 1.5em;
+  margin-top: 1%;
 }
+
+.main {
+
+  margin-top:25px;
+  margin-bottom: 25px;
+}
+
+.mediaHolder {
+
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.media-grid {
+
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+
 
 .modalLink {
-	
-	cursor:pointer;
+
+  cursor:pointer;
+  max-width: 100%;
+  max-height: 100%;
 }
 
-.row.mediaHolder {
-	
-	margin: 0 auto;
-}
 
-.row {
-	
-	margin:30px;
-}
+
+
 .row #myVideo {
 	margin: 0 auto;
+}
+
+.row-title {
+
+  margin: 20px;
+}
+
+
+#buttonRow {
+
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 
@@ -45,50 +74,28 @@ body {
 }
 
 
-
-
-
 @media screen and (min-width:320px){
 	
 .modalLink {
 		
-	height: 60px;
-	width: 100px;
-	margin-left: 6%;
-	margin-bottom:20px;	
+	margin-bottom: 5%;
  }
 
-#mySecondVideo {
-	
-	margin: 0 auto;
-	
-}
+  .row-title {
+   margin: 15px;
+  }
+
 
 }
 
 @media screen and (min-width: 375px) {
-	
-.modalLink {
-		
-	height: 60px;
-	width: 100px;
-	margin-left: 9%;
-	margin-bottom:20px;	
- }
 
 
 	
 }
 
 @media screen and (min-width: 410px) {
-	
-.modalLink {
-		
-	height: 60px;
-	width: 100px;
-	margin-left: 12.5%;
-	margin-bottom:20px;	
- }
+
 
 
 	
@@ -96,14 +103,17 @@ body {
 
 
 
-
-
 @media screen and (min-width:670px){
-	
-    	.modalLink{
-		
-		height: 100px;
-		width:150px;
-    }
+
+
+  .modalLink {
+
+    margin: 0 auto;
+  }
+
+  .row-title {
+
+    margin: 20px;
+  }
 	
 }
