--- a/css/main.css
+++ b/css/main.css
@@ -30,14 +30,14 @@ body {
 
   margin-top: 20px;
   margin-bottom: 20px;
+  animation-name: fadeout;
+  animation-duration: 250ms;
 }
 
 
 .modalLink {
 
   cursor:pointer;
-  max-width: 100%;
-  max-height: 100%;
 }
 
 .image-title, #modalHeaderTitle,
@@ -54,13 +54,20 @@ body {
 
 .row-title {
 
-  margin: 20px;
+  margin-top: 20px;
+
 }
 
 
 #modalPhoto {
 	
 	margin: 0 auto;
+}
+
+#myVideo {
+
+  animation-name: fadeout;
+  animation-duration: 250ms;
 }
 
 
@@ -71,16 +78,26 @@ body {
 	
 }
 
+@keyframes fadeout {
+  from {opacity: 0.3;}
+  to {opacity: 1;}
+
+}
+
 
 @media screen and (min-width:320px){
 	
 .modalLink {
-		
-	margin-bottom: 5%;
+
+    margin-top: 30px;
+	margin-bottom: 10px;
  }
 
   .row-title {
-   margin: 15px;
+
+    margin-top: 15px;
+
+
   }
 
 
